# Virtual-Reality-Project

./: .gitignore  CMakeLists.txt  README.md  split.py
src/: CMakeLists.txt  callbacks.h  camera.h  debug.h  ground.h  main.cpp  object.h  particles.h  physic.h  simple_shader.h  skybox.h  spirit.h  terrain_generation.h  tess_shader.h  water.h
src/assets/objects/: spirit.mtl
src/assets/textures/: island.png~
src/shaders/: fragSrc.fs  simple.fs  simple.vs  vertSrc.vs
src/shaders/bump/: bump.fs  bump.vs
src/shaders/depth/: debug_depth.fs  debug_depth.vs  depth.vs
src/shaders/particle/: particle.fs  particle.vs
src/shaders/sky_box/: sky.fs  sky.vs
src/shaders/terrain_generation/: height.fs  height.tcs  height.tes  height.vs
src/shaders/texture/: simple_texture.fs  simple_texture.vs
src/shaders/water/: water.fs  water.vs
src/utils/: callbacks.h  fps.h  transform.h  transform_conversion.h
